--- a/WgWall/ClientApp/src/app/app.component.html
+++ b/WgWall/ClientApp/src/app/app.component.html
@@ -4,5 +4,8 @@
         <div class="col-md-6">
             <app-tasks></app-tasks>
         </div>
+        <div class="col-md-3">
+            <app-transport></app-transport>
+        </div>
     </div>
 </div>
