--- a/WgWall/ClientApp/src/app/transport/transport.component.html
+++ b/WgWall/ClientApp/src/app/transport/transport.component.html
@@ -1,41 +1,46 @@
 <div class="card">
-    <div class="card-body">
-        <div class="row">
-            <div class="col">
-                <h3>Station {{stationName}}
-                    <a *ngIf="!isEditActive" href="#" class="pl-2" (click)="enableEdit()">
-                        <fa-icon [icon]="faPencilAlt"></fa-icon>
-                    </a>
-                    <a *ngIf="isEditActive" href="#" class="pl-2" (click)="abort()">
-                        <fa-icon [icon]="faTimes"></fa-icon>
-                    </a>
-                </h3>
-            </div>
-        </div>
-
-        <div class="input-group pt-2" *ngIf="isEditActive">
-            <input type="text" [(ngModel)]="stationName" class="form-control form-control-sm" id="productName"
-                placeholder="new product name" (keyup.enter)="save()">
-            <div class="input-group-append">
-                <button class="btn btn-sm btn-success" type="button" (click)="save()">
-                    <fa-icon [icon]="faSave"></fa-icon>
-                </button>
-            </div>
-        </div>
-
-        <p class="small text-secondary help">
-            the next 4 departures
-        </p>
-
-        <table class="table table-sm table-borderless table-striped">
-            <tbody>
-                <tr *ngFor="let vehicle of vehicles; first as isFirst" [class.border-top]="!isFirst">
-                    <td>{{vehicle.name}}</td>
-                    <td class="minimal-width">
-                        {{vehicle.departureTime.getTime() | date: 'shortTime'}}
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+  <div class="card-body">
+    <div class="row" *ngIf="!isEditActive">
+      <div class="col">
+        <h3>
+          departures
+        </h3>
+      </div>
+      <div class="col-md-auto">
+        <button *ngIf="!isEditActive" class="btn btn-link text-secondary btn-lg" [class.d-none]="isEditActive" (click)="startEdit()">
+          <fa-icon [icon]="faPencilAlt"></fa-icon>
+        </button>
+      </div>
     </div>
+
+
+    <div class="form-inline" *ngIf="isEditActive">
+      <div class="form-group flex-grow-1">
+        <input type="text" [(ngModel)]="newStationName" class="form-control form-control-lg flex-grow-1" (keyup.enter)="save()">
+      </div>
+      <div class="btn-group btn-group-lg ml-4">
+        <button class="btn btn-link text-success" type="button" (click)="save()">
+          <fa-icon [icon]="faSave"></fa-icon>
+        </button>
+        <button class="btn btn-link text-warning" type="button" (click)="abort()">
+          <fa-icon [icon]="faUndo"></fa-icon>
+        </button>
+      </div>
+    </div>
+
+    <p class="small text-secondary help">
+      the next few departures from {{stationName}}
+    </p>
+    <table class="table table-sm table-borderless table-striped">
+      <tbody>
+        <tr *ngFor="let vehicle of vehicles; first as isFirst" [class.border-top]="!isFirst">
+          <td>{{vehicle.name}}</td>
+          <td>{{vehicle.to}}</td>
+          <td class="minimal-width">
+            {{vehicle.departureTime.getTime() | date: 'HH:mm'}}
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
