--- a/WgWall/ClientApp/src/app/app.component.html
+++ b/WgWall/ClientApp/src/app/app.component.html
@@ -1,11 +1,13 @@
-<app-top-bar (userSelected)="selectedUser = $event"></app-top-bar>
-<div class='container-fluid mt-3'>
+<div class="container-fluid mt-3">
+  <app-top-bar (userSelected)="selectedUser = $event"></app-top-bar>
+  <div class='mt-3'>
     <div class="row">
-        <div class="col-md-6">
-            <app-tasks></app-tasks>
-        </div>
-        <div class="col-md-3">
-            <app-transport></app-transport>
-        </div>
+      <div class="col-md-6">
+        <app-tasks></app-tasks>
+      </div>
+      <div class="col-md-3">
+        <app-transport></app-transport>
+      </div>
     </div>
+  </div>
 </div>
