adding events tile

--- a/WgWall/ClientApp/src/app/app.component.html
+++ b/WgWall/ClientApp/src/app/app.component.html
@@ -8,6 +8,9 @@
       <div class="col-md-3">
         <app-transport></app-transport>
       </div>
+      <div class="col-md-6">
+        <app-events></app-events>
+      </div>
     </div>
   </div>
 </div>
