adding weather widget

--- a/WgWall/ClientApp/src/app/app.component.html
+++ b/WgWall/ClientApp/src/app/app.component.html
@@ -17,6 +17,9 @@
       <div class="col-md-6">
         <app-events></app-events>
       </div>
+      <div class="col-md-6">
+        <app-weather></app-weather>
+      </div>
     </div>
   </div>
 </div>
