--- a/WgWall/ClientApp/src/app/top-bar/top-bar.component.css
+++ b/WgWall/ClientApp/src/app/top-bar/top-bar.component.css
@@ -1,5 +1,4 @@
 .top-bar {
-    height: 10%;
-    z-index: 100;
-    position: relative;
+  box-shadow: 0 0.25rem 0.8rem rgba(0,0,0,.05);
+  position: relative;
 }
