--- a/WgWall/ClientApp/src/app/app.component.html
+++ b/WgWall/ClientApp/src/app/app.component.html
@@ -14,8 +14,8 @@
         <div class="col col-lg pr-2">
           <app-transport class="row-sm"></app-transport>
           <div class="row-lg">
-            <app-events class="row-md pt-3"></app-events>
-            <app-transport class="row-md pt-3"></app-transport>
+            <app-events class="row-lg pt-3"></app-events>
+            <app-transport class="row-sm pt-3"></app-transport>
           </div>
         </div>
         <div class="col col-sm pl-2">
