--- a/WgWall/ClientApp/src/app/users/users.component.css
+++ b/WgWall/ClientApp/src/app/users/users.component.css
@@ -14,5 +14,10 @@
 }
 
 .nav-link .btn-group-sm > .btn {
-  line-height: 1;
+  line-height: 0;
+  padding: 0;
+}
+
+.form-inline {
+  height: 1.4rem;
 }
