--- a/WgWall/ClientApp/src/app/weather/weather.component.css
+++ b/WgWall/ClientApp/src/app/weather/weather.component.css
@@ -1,3 +1,12 @@
-input-plz {
+.input-plz {
   width: 6rem;
 }
+
+.no-overflow {
+  overflow: hidden;
+}
+
+.form-inline {
+  margin-bottom: 1rem;
+}
+
