--- a/WgWall/ClientApp/src/app/weather/weather.component.html
+++ b/WgWall/ClientApp/src/app/weather/weather.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card no-overflow">
   <div class="card-body">
     <div class="row" *ngIf="!isEditActive">
       <div class="col">
