adding dinner stuff

--- a/WgWall/ClientApp/src/app/app.component.html
+++ b/WgWall/ClientApp/src/app/app.component.html
@@ -15,7 +15,7 @@
           <app-transport class="row-sm"></app-transport>
           <div class="row-lg">
             <app-events class="row-lg pt-3"></app-events>
-            <app-transport class="row-sm pt-3"></app-transport>
+            <app-dinner class="row-sm pt-3"></app-dinner>
           </div>
         </div>
         <div class="col col-sm pl-2">
