working on weather

--- a/WgWall/ClientApp/src/app/weather/weather.component.html
+++ b/WgWall/ClientApp/src/app/weather/weather.component.html
@@ -36,6 +36,8 @@
       weather for the next 48 hours
     </div>
 
+    <div class="chart-label" [innerHTML]="chartHtml">
+    </div>
     <canvas id="weather"></canvas>
 
   </div>
