--- a/WgWall/ClientApp/src/app/transport/transport.component.html
+++ b/WgWall/ClientApp/src/app/transport/transport.component.html
@@ -6,7 +6,7 @@
           departures
         </h3>
       </div>
-      <div class="col-md-auto">
+      <div class="col-auto">
         <button *ngIf="!isEditActive" class="btn btn-link text-secondary btn-lg" [class.d-none]="isEditActive" (click)="startEdit()">
           <fa-icon [icon]="faPencilAlt"></fa-icon>
         </button>
