--- a/WgWall/ClientApp/src/app/users/users.component.html
+++ b/WgWall/ClientApp/src/app/users/users.component.html
@@ -1,6 +1,6 @@
 <div class="row no-gutters">
   <nav class="nav nav-user">
-    <div class="nav-link">
+    <div class="nav-link d-md-block d-none">
       <div class="form-inline" *ngIf="editContainer != null">
         <div class="form-group flex-grow-1">
           <label>name</label>
