--- a/WgWall/ClientApp/src/app/dinner/dinner.component.html
+++ b/WgWall/ClientApp/src/app/dinner/dinner.component.html
@@ -9,7 +9,7 @@
 
 
     <div class="row mt-3">
-      <div class="col-md-auto">
+      <div class="col-auto">
         <div class="d-flex justify-content-between align-items-center">
           <a href="#" class="col-icon mr-2" *ngFor="let plate of plates" (click)="plateSelected()">
             <!-- icon of a dish -->
