--- a/WgWall/ClientApp/src/app/events/events.component.html
+++ b/WgWall/ClientApp/src/app/events/events.component.html
@@ -6,7 +6,7 @@
           events
         </h3>
       </div>
-      <div class="col-md-auto">
+      <div class="col-auto">
         <button class="btn btn-link text-secondary btn-lg" [class.d-none]="actionsActive || (editContainer != null && editSource == null)"
           (click)="startAdd()">
           <fa-icon [icon]="faPlus"></fa-icon>
