--- a/WgWall/ClientApp/src/styles.css
+++ b/WgWall/ClientApp/src/styles.css
@@ -9,11 +9,6 @@ h3 {
   font-size: 2.5rem;
 }
 
-.help {
-    margin-bottom: 0.2rem;
-    margin-top: 0.5rem;
-}
-
 .minimal-width {
     width: 1%;
     white-space: nowrap;
@@ -30,13 +25,6 @@ h3 {
 
 html, body {
   height: 100%;
-}
-
-.card {
-  border-radius: 0;
-  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
-  height: 100%;
-  overflow-y: auto;
 }
 
 .chart-legend {
@@ -63,4 +51,32 @@ html, body {
 
 .chart-legend .chart-legend-preview:first {
   margin-left: 0;
+}
+
+@media only screen and (min-width: 992px) {
+  .card {
+    height: 100%;
+    overflow-y: auto;
+  }
+
+  .help {
+      margin-bottom: 0.2rem;
+      margin-top: 0.5rem;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .card {
+    margin-bottom: 1rem;
+  }
+
+  .help {
+      margin-bottom: 0.2rem;
+      margin-top: 0;
+  }
+}
+
+.card {
+  border-radius: 0;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .15);
 }
