--- a/WgWall/ClientApp/src/app/app.component.html
+++ b/WgWall/ClientApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-top-bar (userSelected)="selectedUser = $event"></app-top-bar>
-<div class="dashboard-wrapper p-3">
+<div class="dashboard-wrapper">
   <div class="row height-full">
     <div class="col-lg-6">
       <app-tasks class="height-low bottom-padding"></app-tasks>
